GNOME Bugzilla – Bug 758930
GTK+ spamming system logs with "doesn't match state" warnings
Last modified: 2015-12-01 23:52:14 UTC
In current Rawhide, my system logs are absolutely *deluged* with messages like this: Dec 01 15:08:51 adam.happyassassin.net gedit.desktop[3335]: (gedit:3335): Gtk-WARNING **: State 0 for GeditView 0x561f8f8be460 doesn't match state 192 set via gtk_style_context_set_state () I have them for four different apps. As well as gedit, I have: firefox: Dec 01 15:09:10 adam.happyassassin.net firefox.desktop[3309]: (firefox:3317): Gtk-WARNING **: State 0 for GtkEntry 0x7efd5e34be20 doesn't match state 128 set via gtk_style_context_set_state () evolution: Dec 01 15:09:40 adam.happyassassin.net evolution.desktop[3278]: (evolution:3278): Gtk-WARNING **: State 0 for EMailShellSidebar 0x560a2ead92f0 doesn't match state 192 set via gtk_style_context_set_state () and terminal: Dec 01 14:45:38 adam.happyassassin.net org.gnome.Terminal[2736]: (gnome-terminal-server:3403): Gtk-WARNING **: State 0 for TerminalScreen 0x561f17f595b0 doesn't match state 128 set via gtk_style_context_set_state () I don't know if the apps need to fix something, but the level of log spam is excessive, it drowns out anything else I might want to look at in the logs.
https://mail.gnome.org/archives/commits-list/2015-December/msg00152.html reduces the spam considerably, I hope.