stylecontext: Don't emit state warning for transient nodes

It's fine to call set_state() on those.

https://bugzilla.gnome.org/show_bug.cgi?id=758930